Hecho log servidor y cliente, comprobación clave maestra y colorines interfaz

--- a/prac/.env
+++ b/prac/.env
@@ -1,3 +1,2 @@
 MASTER_PASSWORD="informaciónSeguro1234"
-MASTER_PASSWORD_DB="archivoSeeguro1234"
-USE_ENCRYPTED_DB="true"
+MASTER_PASSWORD_JWT="tokenJWTSecreto"
